# rupta

./: Cargo.toml  README.md  array  branch  build-and-install.sh  debug-output.txt  metadata.json  note.md  run-rupta.sh  rupta_summary.md  rust-toolchain.toml  rustfmt.toml
docs/: Gemfile  _config.yml  index.html  index.md
docs/_layouts/: default.html
src/: lib.rs
src/builder/: call_graph_builder.rs  error_inside.txt  fpag_builder.rs  mod.rs  special_function_handler.rs  substs_specializer.rs
src/graph/: call_graph.rs  func_pag.rs  mod.rs  pag.rs
src/info_collector/: callsite_metadata.rs  crate_metadata.rs  func_metadata.rs  mod.rs  vec_set.rs
src/mir/: analysis_context.rs  call_site.rs  context.rs  function.rs  known_names.rs  mod.rs  path.rs  ssa_build.rs  visibility.rs
src/pta/: andersen.rs  context_sensitive.rs  flow_sensitive.rs  mod.rs  todo.txt
src/pts_set/: mod.rs  points_to.rs  pt_data.rs
src/rta/: body_visitor.rs  mod.rs  rta.rs
src/ssa_mir/: gvn.rs  mod.rs  path.rs  phi.rs
src/util/: bit_vec.rs  call_graph_stat.rs  chunked_queue.rs  dot.rs  index_tree.rs  mem_watcher.rs  mod.rs  options.rs  pta_statistics.rs  results_dumper.rs  type_util.rs  unsafe_statistics.rs
tests/new_tests/: branch.rs
tests/unit_tests/: alloc.rs  array.rs  associated_type.rs  box_array.rs  box_dyn.rs  box_fn.rs  box_fnonce.rs  box_struct.rs  cast_arr_to_ptr.rs  cast_box.rs  cast_fnptr.rs  cast_option.rs  cast_pointers.rs  cast_struct.rs  cast_unsize.rs  closure.rs  closure_capture.rs  closure_generic.rs  closure_param.rs  const_fn_ptr.rs  const_generic.rs  enum.rs  (+38 more)
(+26 files in other folders)
